fix: header visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -804,6 +804,7 @@ footer ul a:hover {
     transition: height 400ms ease;
     position: absolute;
     left: 0;
+    z-index: 10;
     top: 95px;
     flex-direction: column;
     background: #fff;
